tests/NormalTests/paczka1/fuzzy1/76729969.err
Error in line 2: ITuf A970 98,6
Error in line 3: NQQ8tSZDVrm S500 81,0
Error in line 16: Y1Bf A970 51,2
Error in line 22: NQQ8tSZDVrm A970 91,7
Error in line 34: A970 S500 41,91
Error in line 38: A970 A405 28,8
